Derp: Added SpeedInsights for more analytics.

--- a/src/app/articles/install-cobol-on-mac/page.mdx
+++ b/src/app/articles/install-cobol-on-mac/page.mdx
@@ -16,7 +16,7 @@ export const metadata = {
 
 export default (props) => <ArticleLayout article={article} {...props} />
 
-<Image src={mysqlImage} alt="MySQL logo on a block." />
+<Image src={cobolImage} alt="MySQL logo on a block." />
 *Image credit: GnuCOBOL*
 
 
